appId: pdfreader.pdfviewer.officetool.pdfscanner
---
- runFlow:
    file: "../hooks/beforeHook.yaml"
    env:
        FILENAME: "test.pdf"

- assertVisible:
    text: "PDF Reader"

- takeScreenshot:
    path: Screen-shots/Actual/home-page

- extendedWaitUntil:
    visible: "Open" # or any other selector
    timeout: 10000

- tapOn:
    text: "Open"

- assertVisible:
    text: "Large files"

- tapOn:
    text: "Search"

- inputText:
    text: ${FILENAME}

- back
- killApp