appId: pdfreader.pdfviewer.officetool.pdfscanner
---

- runFlow:
    file: "../hooks/beforeHook.yaml"  
    label: "Setting up the app with fresh state"

- extendedWaitUntil:
    visible: "Allow Access" # or any other selector
    timeout: 10000

- tapOn:
    text: "Allow Access"
    label: "Tap on Allow Access button"

- assertVisible:
    text: "Allow access to manage all files"
    label: "Verify phone settings"

- tapOn:
    text: "Allow access to manage all files"
    label: "enable permissions"
        
- assertVisible:
    text: "No files found"
    label: "Verify app redirection after permission"

- killApp:
    label: "Close the app"